--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>fr.cytech</groupId>
 	<artifactId>projet_devweb_ing1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>projet_devweb_ing1</name>
 	<description>Projet devweb ING 1, basé sur Spring Boot</description>
 	<url/>
