--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+## General settings
 spring.application.name=projet_devweb_ing1
+
+## Model settings
+# Set the driver and path
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.url=jdbc:sqlite:DATABASE.db
+# Hibernate doesn't use SQLite unless told to
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+# Set to create-drop to reset the database on launch, useful for debugging
+spring.jpa.hibernate.ddl-auto=update
+
+## View settings
+# Prefix setup
+spring.mvc.view.prefix=/jsp/
+spring.mvc.view.suffix=.jsp
