Error page handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-## General settings
+### General settings
 spring.application.name=projet_devweb_ing1
 
-## Model settings
+### Model settings
 # Set the driver and path
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.url=jdbc:sqlite:DATABASE.db
@@ -10,7 +10,11 @@ spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 # Set to create-drop to reset the database on launch, useful for debugging
 spring.jpa.hibernate.ddl-auto=update
 
-## View settings
+### View settings
 # Prefix setup
 spring.mvc.view.prefix=/jsp/
 spring.mvc.view.suffix=.jsp
+
+### Controller settings
+# Disable default error page to use our own
+server.error.whitelabel.enabled=false
