--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -72,6 +72,24 @@
                 </executions>
             </plugin>
 
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${basedir}/target</directory>
+                        </fileset>
+                        <fileset>
+                            <directory>${basedir}/dist</directory>
+                        </fileset>
+                        <fileset>
+                            <directory>${basedir}/node</directory>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
