TEMP BROKEN NOT WORKING FUCK

--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.url=jdbc:sqlite:DATABASE.db
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 # Set to create-drop to reset the database on launch, useful for debugging
 spring.jpa.hibernate.ddl-auto=update
+
+security.basic.enabled=false
