Right you don't need quotes.

--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -17,4 +17,4 @@ app.jwt-expiration-milliseconds=604800000
 app.admin-email=admin@admin.admin
 app.admin-username=admin
 # Default password, admin123
-app.admin-password="$2a$10$uWVxmTosTF67gff7ZdjG3.V8KJ9x8Z0QQ3nn.A4AE3ewy71LnsYIu"
+app.admin-password=$2a$10$uWVxmTosTF67gff7ZdjG3.V8KJ9x8Z0QQ3nn.A4AE3ewy71LnsYIu
