--- a/application/pom.xml
+++ b/application/pom.xml
@@ -101,6 +101,27 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>3.6.3</version>
+            <configuration>
+                <source>${java.version}</source>
+                <detectJavaApiLink>false</detectJavaApiLink>
+                <additionalJOption>-Xdoclint:none</additionalJOption>
+                <outputDirectory>${project.build.directory}/javadoc</outputDirectory>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>attach-javadocs</id>
+                    <goals>
+                        <goal>jar</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
         </plugins>
     </build>
 
