--- a/application/pom.xml
+++ b/application/pom.xml
@@ -92,6 +92,11 @@
             <version>1.13.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>3.0-rc1</version>
+        </dependency>
 
     </dependencies>
 
