--- a/application/pom.xml
+++ b/application/pom.xml
@@ -91,12 +91,21 @@
             <artifactId>commons-text</artifactId>
             <version>1.13.0</version>
         </dependency>
-
+        
+        <!-- JSON annotations -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>3.0-rc1</version>
+            <version>2.18.3</version>
         </dependency>
+
+        <!-- JSON (de)serializer -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.18.3</version>
+        </dependency>
+
 
     </dependencies>
 
