--- a/application/pom.xml
+++ b/application/pom.xml
@@ -106,6 +106,11 @@
             <version>2.18.3</version>
         </dependency>
 
+        <dependency>
+    <groupId>org.springdoc</groupId>
+    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    <version>2.8.5</version>
+</dependency>
 
     </dependencies>
 
