Profile picture support

--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 spring.application.name=projet_devweb_backend
 
 ### Model settings
+# File database root path
+app.database.path.root=./database
+app.database.path.profile-pictures=/profile-pictures
 # Set the driver and path
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.url=jdbc:sqlite:DATABASE.db
